fixed bottom - btns on mobile

--- a/styles.css
+++ b/styles.css
@@ -264,7 +264,13 @@ input[type="radio"] {
   line-height: normal;
   border-radius: 0%;
 }
-
+.btn-container {
+  padding: 2rem 1.5rem !important;
+  background-color: var(--content-bg);
+    position: sticky;
+    bottom: 0;
+    z-index: 1020;
+}
 .citizen-container input {
   display: none;
 }
@@ -443,4 +449,8 @@ background-color: white;
 .form-main-header{
   font-size: 1.5rem;
 }
+.form-content {
+  padding: 3rem 1.5rem !important;
+}
+
 }
